--- a/.github/workflows/apbx.yaml
+++ b/.github/workflows/apbx.yaml
@@ -8,7 +8,7 @@ on:
       - "**/*.yml"
 
 env:
-  SXSC_REPO: "https://github.com/Atlas-OS/sxsc"
+  SXSC_REPO: "https://github.com/Catflower75/sxsc"
 
 jobs:
   build:
@@ -17,9 +17,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          ref: ${{ github.ref }}
-          token: ${{ secrets.RUNNER_SECRET }}
 
       - name: Validate YAML files
         run: 'yamllint -d "{extends: relaxed, rules: {empty-lines: disable, line-length: disable, new-line-at-end-of-file: disable, trailing-spaces: disable, new-lines: {type: platform}}}" .'
